--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "luigibittencourtmarzinotto/rdstation",
+    "description": "Integração para Laravel 12 com a RD Station: OAuth2, upsert de contatos, negócios (deals), eventos e webhooks, com refresh automático de token, retries e idempotência.",
     "keywords": [
-        ":vendor_name",
+        "Luigi Bittencourt Marzinotto",
         "laravel",
-        ":package_slug"
+        "rdstation"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/luigibittencourtmarzinotto/rdstation",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Luigi Bittencourt Marzinotto",
+            "email": "bittencourt.marzinotto@gmail.com",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": "^8.3",
+        "php": "^8.2",
         "spatie/laravel-package-tools": "^1.16",
         "illuminate/contracts": "^10.0||^11.0||^12.0"
     },
@@ -35,13 +35,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src/",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories/"
+            "LuigiBittencourtMarzinotto\\RDStation\\": "src/",
+            "LuigiBittencourtMarzinotto\\RDStation\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests/",
+            "LuigiBittencourtMarzinotto\\RDStation\\Tests\\": "tests/",
             "Workbench\\App\\": "workbench/app/"
         }
     },
@@ -63,10 +63,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "LuigiBittencourtMarzinotto\\RDStation\\RDStationServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "RDStation": "LuigiBittencourtMarzinotto\\RDStation\\Facades\\RDStation"
             }
         }
     },
